Some initial fixes and cleanup in src/comm

--- a/src/muse/Makefile
+++ b/src/muse/Makefile
@@ -11,7 +11,7 @@ install: all
 	-mv -f ../../bin/netmuse ../../bin/netmuse~
 	install netmuse ../../bin
 
-netmuse: cque.o game.o match.o move.o players.o powerlist.o powers.o predicates.o stringutil.o timer.o unparse.o utils.o wild.o conf.o maze.o ../comm/libcomm.a ../db/libdb.a ../io/libio.a ../prog/libprog.a
+netmuse: admin.o cque.o game.o match.o move.o player.o players.o powerlist.o powers.o predicates.o stringutil.o timer.o unparse.o utils.o wild.o conf.o maze.o ../comm/libcomm.a ../db/libdb.a ../io/libio.a ../prog/libprog.a
 #	$(CC) $(CFLAGS) $(LIBS) -o netmuse cque.o game.o match.o move.o  players.o powerlist.o powers.o predicates.o stringutil.o timer.o unparse.o utils.o wild.o conf.o maze.o ../comm/libcomm.a ../db/libdb.a ../io/libio.a ../prog/libprog.a -lc -lm
-	$(CC) $(CFLAGS) -o netmuse cque.o game.o match.o move.o  players.o powerlist.o powers.o predicates.o stringutil.o timer.o unparse.o utils.o wild.o conf.o maze.o ../comm/libcomm.a ../db/libdb.a ../io/libio.a ../prog/libprog.a -lc -lm $(LIBS)
+	$(CC) $(CFLAGS) -o netmuse admin.o cque.o game.o match.o move.o player.o players.o powerlist.o powers.o predicates.o stringutil.o timer.o unparse.o utils.o wild.o conf.o maze.o ../comm/libcomm.a ../db/libdb.a ../io/libio.a ../prog/libprog.a -lc -lm $(LIBS)
 
