more fixes and reorg

--- a/src/muse/Makefile
+++ b/src/muse/Makefile
@@ -19,8 +19,8 @@ LIBS = -lm -lcrypt
 TOPDIR = ..
 
 # Source files
-SRCS = admin.c cque.c game.c match.c move.c player.c powerlist.c powers.c \
-       predicates.c stringutil.c timer.c unparse.c utils.c wild.c conf.c maze.c
+SRCS = admin.c cque.c game.c match.c move.c player.c powers.c  predicates.c \
+       stringutil.c timer.c unparse.c utils.c wild.c conf.c maze.c
 
 # Object files
 OBJS = $(SRCS:.c=.o)
