--- a/src/muse/Makefile
+++ b/src/muse/Makefile
@@ -19,7 +19,7 @@ LIBS = -lm -lcrypt
 TOPDIR = ..
 
 # Source files
-SRCS = admin.c cque.c game.c match.c move.c player.c powers.c  predicates.c \
+SRCS = admin.c cque.c game.c match.c move.c parser.c player.c powers.c  predicates.c \
        stringutil.c timer.c unparse.c utils.c wild.c conf.c maze.c
 
 # Object files
