--- a/src/muse/Makefile
+++ b/src/muse/Makefile
@@ -20,7 +20,7 @@ TOPDIR = ..
 
 # Source files
 SRCS = admin.c cque.c game.c match.c move.c parser.c player.c powers.c  predicates.c \
-       stringutil.c timer.c unparse.c utils.c wild.c conf.c maze.c
+       stringutil.c timer.c unparse.c utils.c wild.c conf.c maze.c zones.c
 
 # Object files
 OBJS = $(SRCS:.c=.o)
